--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -1,9 +1,9 @@
-.main-container{
+/* .main-container{
     max-width: 980px;
     margin:0 auto;
     padding: 50px 0;
     text-align: center;
-}
+} */
 
 .main-container ul{
     list-style: none;
