--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -1,19 +1,32 @@
-
-.fixado{
-position:fixed ;
+.fixado {
+    position: fixed;
 }
 
- .mr-3:hover{
--webkit-transform: scale(1.3);
--ms-transform: scale(1.3);
-transform: scale(1.3);
+.mr-3:hover {
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
 }
-.espaca{
+
+.espaca {
     padding: 10px;
     margin: 10px;
     align-items: center;
 }
-.espacaCartao{
+
+.espacaCartao {
     margin: 10px;
 }
-  
+
+.grid-template-columns-1 {
+    grid-template-columns: auto auto;
+}
+
+.grid {
+    display: grid;
+}
+
+.item {
+    text-align: center;
+    font-size: 1.5em;
+}
