--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,3 @@
-*{
-    margin: 0px;
-    padding:0px;
-    outline: 0px;
-    box-sizing: border-box;
-}
-
-html,body, #root{
-    height: 100%;
-}
-
-body{
-    background: #f5f5f5;
-}
-
-body,input,button{
-    font-family: Arial, Helvetica, sans-serif;
+html, body, #app, #app>div {
+    height: 100%
 }
