--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,10 +1,12 @@
 .modal-wrapper {
     background: white;
     border: 1px solid #d0cccc;
-    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.17);
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
     margin: 100px auto 0;
     transition: all .8s;
-    width: 60%;
+    width: 100%;
+    position: absolute;
+    z-index: 4;
 }
 
 .modal-header {
@@ -67,8 +69,6 @@
 
 .back-drop {
     background-color: rgba(48, 49, 48, 0.42);
-    height: 100%;
-    position: fixed;
     transition: all 1.3s;
     width: 100%;
 }
