criação da página de update de itens do cardapio

--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -29,7 +29,7 @@
   /* this adds the "card" effect */
   padding: 16px;
   text-align: center;
-  background-color: black;
+  background-color: grey;
 }
 
 /* Responsive columns - one column layout (vertical) on small screens */
