--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 body {
-  background-color: #000000;
-  color: rgba(255, 255, 255, 0.7);
   font-family: 'Lato', sans-serif;
   margin: 20px;
 }
@@ -14,7 +12,7 @@ body {
 
 .menu {
   text-transform: uppercase;
-  color: rgba(255, 255, 255, 0.8);
+  color:black;
   display: inline-block;
   cursor: pointer;
   pointer-events: none;
@@ -46,7 +44,7 @@ body {
 .spacer:before {
   content: "";
   position: absolute;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid black;
   height: 1px;
   width: 0%;
   transition: width 0.25s ease;
