--- a/src/pages/ItemCardapio/styles.css
+++ b/src/pages/ItemCardapio/styles.css
@@ -1,23 +1,27 @@
 label#thumbnail {
-    margin-bottom: 20px;
-    border: 1px dashed #ddd;
-    background-size: cover;
-    cursor: pointer;
-    height: 160px;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  label#thumbnail input {
-    display: none;
-  }
-  
-  label#thumbnail.has-thumbnail {
-    border: 0;
-  }
-  
-  label#thumbnail.has-thumbnail img {
-    display: none;
-  }
+  margin-bottom: 20px;
+  border: 1px dashed #ddd;
+  background-size: cover;
+  cursor: pointer;
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+label#thumbnail input {
+  display: none;
+}
+
+label#thumbnail.has-thumbnail {
+  border: 0;
+}
+
+label#thumbnail.has-thumbnail img {
+  display: none;
+}
+
+.input {
+  border-radius: 5px;
+}
