--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,106 +1,153 @@
 
-*, :before, :after{ box-sizing: border-box; }
-// FONTS
-$sans: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-
-// COLORS
-$orange: blue;
-$gray: #35302D;
-$gray-shine: #3C3735;
-$white-off: #DFDBD9;
-
-// REUSABLE STYLES
-.unstyled{ list-style: none; padding: 0; margin: 0;
-  a{ text-decoration: none; }
-}
-.list-inline{ overflow: hidden;
-  li{ float: left; }
+.sidebar {
+  position: fixed;
+  width: 20%;
+  height: 100%;
+  background:  #35302D;
+  font-size: 0.65em;
 }
 
-// HEADER STYLES
-.header{
-  left: 0; top: 0; bottom: 0;
-    background: $gray;
+.nav {
+  position: relative;
+  margin: 0 15%;
+  text-align: right;
+  top: 40%;
+  transform: translateY(-50%);
+  font-weight: bold;
 }
 
-// MAIN NAV
-.main-nav{
+.nav ul {
+  list-style: none;
   
-  ul{
-    border-top: solid 1px $gray-shine;
-  }
-  
-  li{
-    border-bottom: solid 1px $gray-shine;
-  }
-  
-  a{
-    padding: 1.1em 0;
-    color: $white-off;
-    font: 200 1.125em $sans;
-    text{
-      align: center;
-      transform: lowercase;
-    }
-    
-    &:hover{
-      color: #fff;
-    }
-  }
-}
-
-// SOCIAL LINKS
-.social-links{
-  border-bottom: solid 1px $gray-shine;
-  
-  li{
-    width: 100%;
-    border-left: solid 1px $gray-shine;
-    &:first-child{ border: none; }
-  }
-  
-  a{
-    display: block;
-    text-align: center;
-    color: $gray-shine;
-    &:hover{
-      color: $white-off;
-    }
-  }
-}
-
-// HOVER SLIDE EFFECT
-.list-hover-slide{
-  
-  li{
+  li {
     position: relative;
-    overflow: hidden;
-  }
-  
-  a{
-    display: block;
-    position: relative;
-    z-index: 1;
-    transition: .35s ease color;
+    margin: 3.2em 0;
     
-    &:before{
-      content: '';
+    a {
+      line-height: 5em;
+      text-transform: uppercase;
+      text-decoration: none;
+      letter-spacing: 0.4em;
+      color: rgba(#FFF, 0.35);
       display: block;
-      z-index: -1;
-      position: absolute;
-      left: -100%; top: 0;
-      width: 100%; height: 100%;
-      border-right: solid 5px $orange;
-      background: $gray-shine;
-      transition: .35s ease left;
+      transition: all ease-out 300ms;
     }
     
-    &.is-current,
-    &:hover{
-      
-      &:before{
-        left: 0;
-      }
+    &.active a {
+      color: white;
+    }
+    
+    &:not(.active)::after {
+      opacity: 0.2;
+    }
+    
+    &:not(.active):hover a {
+      color: rgba(#FFF, 0.75);
+    }
+    
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 0.2em;
+      background: black;
+      left: 0;
+      bottom: 0;
+      background-image: linear-gradient(to right, grey, blue)
     }
   }
 }
+
+// *, :before, :after{ box-sizing: border-box; }
+// // FONTS
+// $sans: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+
+// // COLORS
+// $orange: rgb(85, 81, 255);
+// $gray: #35302D;
+// $gray-shine: #3C3735;
+// $white-off: #DFDBD9;
+
+// // REUSABLE STYLES
+// .unstyled{ list-style: none; 
+//    width: 100%;
+//   height: 100%;
+//   a{ text-decoration: none; }
+// }
+// .list-inline{ overflow: hidden;
+//   li{ float: left; }
+// }
+
+// // HEADER STYLES
+// .header{
+//   width: 100%;
+//   height: 100%;
+//     background: $gray;
+// }
+
+// // MAIN NAV
+// .main-nav{
+//   width: 100%;
+//   height: 100%;
+//   ul{
+//     border-top: solid 1px $gray-shine;
+//     width: 100%;
+//     height: 100%;
+//   }
+  
+//   li{
+//     border-bottom: solid 1px $gray-shine;
+//     justify-content: 'center';
+    
+//   }
+  
+//   a{
+//     color: $white-off;
+//     font: 200 1.125em $sans;
+//     text{
+//       align: center;
+//       transform: lowercase;
+//     }
+    
+//     &:hover{
+//       color: #fff;
+//     }
+//   }
+// }
+
+// // HOVER SLIDE EFFECT
+// .list-hover-slide{
+//   width: 100%;
+//   height: 100%;
+//   li{
+//     position: relative;
+//     overflow: hidden;
+//   }
+  
+//   a{
+//     display: block;
+//     position: relative;
+//     z-index: 1;
+//     transition: .35s ease color;
+    
+//     &:before{
+//       content: '';
+//       display: block;
+//       z-index: -1;
+//       position: absolute;
+//       left: -100%; top: 0;
+//       width: 100%; height: 100%;
+//       border-right: solid 5px $orange;
+//       background: $gray-shine;
+//       transition: .35s ease left;
+//     }
+    
+//     &.is-current,
+//     &:hover{
+      
+//       &:before{
+//         left: 0;
+//       }
+//     }
+//   }
+// }
