--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
-#root,html,body{
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+#root, html, body {
     margin: 0;
     height: auto;
-    width:auto ;
+    width: auto;
+    font-family: Arial;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 0.1em;
+    display: block;
+    transition: all ease-out 300ms;
 }
