--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,17 @@
     letter-spacing: 0.1em;
     display: block;
     transition: all ease-out 300ms;
+    overflow-x: hidden;
+}
+/*Pra tirar a setinha do input number*/
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance:textfield;
 }
