--- a/src/pages/AddMesas/AddMesas.css
+++ b/src/pages/AddMesas/AddMesas.css
@@ -30,3 +30,107 @@
     border-color: white;
     border-radius: 5px;
 }
+
+.mesas-card-quantidade {
+    width: 100%;
+    height: 100%;
+    background-color: #35302D;
+    color: white;
+    font-size: large;
+    margin-top: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 1%;
+    position: relative;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
+.container {
+    margin: auto;
+    width: 95%;
+    height: 95%;
+    left: 20vw;
+    top: 16px;
+    background: #35302D;
+    border-radius: 5px;
+    overflow: auto;
+}
+
+/* Frame 5 */
+
+.container-header {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 95%;
+    height: 10%;
+    top: 20px;
+    border: 4px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+.container-header-cont {
+    position: relative;
+    width: 401px;
+    height: 57px;
+    left: calc(50% - 401px/2 - 0.5px);
+    top: calc(50% - 57px/2 + 0.5px);
+}
+
+.container-header-numero {
+    position: absolute;
+    width: fit-content;
+    height: 53px;
+    left: 115px;
+    top: 2px;
+    font-family: Quattrocento Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 53px;
+    color: #FFFFFF;
+}
+
+.container-add-e-remove {
+    margin: auto;
+    height: 85%;
+    width: 100%;
+    display: flex;
+    padding: 20px;
+    justify-content: stretch;
+}
+
+.container-add {
+    position: relative;
+    width: 48%;
+    height: 100%;
+    border: 4px solid #FFFFFF;
+    box-sizing: border-box;
+    margin: auto;
+}
+
+.container-remove {
+    margin: auto;
+    width: 48%;
+    height: fit-content;
+    border: 4px solid #FFFFFF;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+}
+
+.container-texto {
+    margin-left: 20px;
+    margin-right: auto;
+    margin-top: 20px;
+    font-family: Quattrocento Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 53px;
+    color: #FFFFFF;
+}
